src/css/site.css
/* ... */
.about-us-banner {
  background: url("../images/aboutus-banner.png");
  background-repeat: no-repeat;
  background-position: right top;
  -webkit-background-size: 51%;
  background-size: 51%;
}

/*Integration Page Css*/
.integration-banner::before {
  background-image: url("../images/integration-right.png");
  background-position: right 84px;
  background-size: 34% auto;
  background-repeat: no-repeat;
  position: absolute;
  content: "";
  width: 100%;
  height: 100%;
  z-index: 10;
}
.integration-banner::after {
  background-image: url("../images/integration-left.png");
  background-position: 50px 0px;
  background-size: 30% auto;
  background-repeat: no-repeat;
  position: absolute;
  content: "";
  width: 100%;
  height: 100%;
  top: 86px;
  z-index: 10;
}

.search-cover,
.filter-menu {
  @apply border;
  @apply border-solid;
  border-color: #3f3c7f;
  box-shadow: 0px 4px 15px 6px rgba(0, 0, 0, 0.05);
  -webkit-box-shadow: 0px 4px 15px 6px rgba(0, 0, 0, 0.05);
}
.filter-menu .ais-refinement-list--checkbox {
  @apply w-5;
  @apply h-5;
  @apply bg-blueNew-eastbay;
  @apply cursor-pointer;
}

.content-box {
  @apply border;
  @apply border-solid;
  @apply bg-blueNew-eastbay;
  /* border-color: #3f3c7f ; */
}

.floatbtncoantiner {
  position: fixed;
  right: -100px;
  bottom: 150px;
  transition: right 0.5s;
  cursor: pointer;
  display: none;
}

.floatbtnanimation {
  right: 20px;
}

.circle-check-items ul li {
  @apply relative;
  @apply w-full;
  @apply pl-11;
  @apply mt-4;
}

.circle-check-items ul li::before {
  @apply absolute;
  content: "";
  background-image: url("../images/circle_check.svg");
  background-repeat: no-repeat;
  @apply bg-center;
  @apply w-5;
  @apply h-5;
  @apply top-1.5;
  @apply left-0;
}

/*Source Integration Page Css*/
.arrow-list-items ul li {
  @apply relative;
  @apply w-full;
  @apply pl-11;
  @apply mt-4;
}
.what-can-do::before,
.arrow-list-items ul li::before {
  @apply absolute;
  content: "";
  background-image: url("../images/line-arrow-right.svg");
  background-repeat: no-repeat;
  @apply bg-center;
  @apply w-5;
  @apply h-5;
  @apply top-1.5;
  @apply left-0;
}
.int-img {
  height: 220px;
  border-bottom: 1px solid #e1e1e1;
}

/*Video On Demand*/
.video-banner-bg {
  background: url("../images/video-banner-bg.svg");
  background-repeat: no-repeat;
  background-position: right top;
  background-size: 51%;
}
.video-banner-bg .text-5xl {
  font-size: 48px !important;
}

/*Video On Demand*/
.conract-us-bg {
  background: url("../images/video-banner-bg.svg");
  background-repeat: no-repeat;
  background-position: right top;
  background-size: 51%;
}

.speaker-pic {
  @apply w-36;
  @apply h-36;
  @apply rounded-full;
}
.speaker {
  background-color: #eef5f5;
}

@media only screen and (min-width: 1023px) {
  .menu li.has-submenu:hover a:after {
    transform: rotate(225deg);
    top: 0px;
  }
}

@media only screen and (max-width: 1023px) {
  .about-us-banner {
    background-position: right 10px;
  }
  .menu {
    background-color: #fff !important;
    @apply w-full !important;
  }
  .sub-menu:after {
    display: none;
  }
  .menu li.has-submenu {
    position: relative;
  }
  .menu li.has-submenu a:after {
    position: absolute;
    top: 20px;
  }
  /*Integration Page Css*/
  .integration-banner::before {
    right: -190px;
    background-position: right 20px;
    background-size: 50% auto;
  }
  .integration-banner::after {
    background-position: -30px 0px;
    background-size: 25% auto;
    top: 8px;
  }
}
@media only screen and (max-width: 1120px) {
  .demo-submit-background {
    background-image: url("../images/form-submit-header-right.png");
    background-position: bottom right;
    background-size: 350px auto;

    background-repeat: no-repeat;
  }

  .demo-header-bg {
    background-image: none;
    background-position: bottom right;
    background-size: 640px auto;
    background-repeat: no-repeat;
  }
}

@media (max-width: 992px) {
  .integration-banner::after {
    background-position: -30px 0px;
    background-size: 265px auto;
    top: 6px;
  }
  /*Source Integration Page*/
  .int-img {
    height: 150px;
  }
}

@media only screen and (max-width: 767px) {
  .integration-banner::after {
    top: 36px;
    background-position: -85px 0px;
    background-size: 195px auto;
  }
  .integration-banner::before {
    right: -160px;
    background-position: right 25px;
  }
}

@media only screen and (max-width: 639px) {
  /*Integration Page Css*/
  .floatbtncoantiner {
    display: block;
  }
  /* Tab content - closed */
  .filter-menu .tab-content {
    max-height: 0;
    -webkit-transition: max-height 0.35s;
    -o-transition: max-height 0.35s;
    transition: max-height 0.35s;
  }
  /* :checked - resize to full height */
  .filter-menu .tab input:checked ~ .tab-content {
    max-height: 100vh;
  }
  /* Icon */
  .filter-menu .tab label {
    cursor: pointer;
  }
  .filter-menu .tab label::after {
    float: right;
    right: 0;
    top: 0;
    display: block;
    -webkit-transition: all 0.35s;
    -o-transition: all 0.35s;
    transition: all 0.35s;
  }
  /* Icon formatting - closed */
  .filter-menu .tab input[type="checkbox"] + label::after {
    content: url("../images/chevron-down.svg");
  }
  /* Icon formatting - open */
  .filter-menu .tab input[type="checkbox"]:checked + label::after {
    transform: rotate(180deg);
  }
}

@media only screen and (max-width: 500px) {
  .about-us-banner {
    background: none;
  }
  .bg-hero-pattern {
    -webkit-background-size: cover;
    background-size: cover;
    background-position: center top;
  }

  .demo-submit-background {
    background-image: none;
    background-repeat: no-repeat;
  }
  .conract-us-bg {
    background: none;
  }
}

@media only screen and (max-width: 480px) {
  .integration-banner::before {
    right: -120px;
    background-position: right 18px;
  }
  .integration-banner::after {
    top: 13px;
    background-position: -120px 0px;
    background-size: 175px auto;
  }
}

